--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "browser-router": "^0.2.0",
+    "concurrently": "^8.2.2",
+    "i": "^0.3.7",
+    "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
+    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "repository": {
@@ -19,7 +29,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "cd ../backend && npm run dev",
+    "dev": "concurrently -n \"CLIENT,SERVER\" -c \"blue,green\" \"npm start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
