--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.10.0",
     "browser-router": "^0.2.0",
     "concurrently": "^8.2.2",
+    "dotenv": "^17.2.0",
     "i": "^0.3.7",
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
