--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
     "swiper": "^9.3.2",
+    "validator": "^13.15.15",
     "web-vitals": "^2.1.4"
   },
   "repository": {
