--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "browser-router": "^0.2.0",
