--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -13,6 +13,7 @@
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
@@ -25,6 +26,7 @@
     "react-type-animation": "^3.2.0",
     "swiper": "^9.3.2",
     "validator": "^13.15.15",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
