--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
     "swiper": "^9.3.2",
     "validator": "^13.15.15",
