--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.10.0",
     "browser-router": "^0.2.0",
     "concurrently": "^8.2.2",
+    "copy-to-clipboard": "^3.3.3",
     "dotenv": "^17.2.0",
     "i": "^0.3.7",
     "npm": "^9.6.7",
@@ -17,12 +18,14 @@
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
+    "react-markdown": "^10.1.0",
     "react-otp": "^0.0.1",
     "react-otp-input": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-stars": "^2.2.5",
     "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
     "swiper": "^9.4.1",
