--- a/11_Final_EDtech_project/frontend/package.json
+++ b/11_Final_EDtech_project/frontend/package.json
@@ -7,12 +7,14 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "browser-router": "^0.2.0",
+    "chart.js": "^4.5.0",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
     "dotenv": "^17.2.0",
     "i": "^0.3.7",
     "npm": "^9.6.7",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.61.1",
